add: task-related api #20220311004
